plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'io.github.gyu-young-park'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
//	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.jsoup:jsoup:1.20.1'
	implementation 'org.mapstruct:mapstruct:1.6.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
	implementation 'com.google.api-client:google-api-client:2.8.0'
	implementation 'com.google.apis:google-api-services-youtube:v3-rev20250422-2.0.0'
	implementation("com.fasterxml.jackson.core:jackson-databind:2.20.0")
	implementation 'com.google.http-client:google-http-client-jackson2:1.47.0'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.0'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'ch.qos.logback:logback-classic:1.5.18'
	implementation 'org.slf4j:slf4j-api:2.0.17'
}

tasks.named('test') {
	useJUnitPlatform()
}
